--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tremor/react": "^3.18.3",
     "d3": "^7.9.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
